# faraday

./: .gitignore  docker-compose.yml
be/: .gitignore  Dockerfile  README.md  alembic.ini  manage.py  pyproject.toml  pytest.ini  run.sh  tox.ini
be/app/: __init__.py  app.py  main.py  registry.py
be/app/api/routes/: __init__.py  base.py  packages.py
be/app/api/schema/: __init__.py  package.py  pagination.py
be/app/cli/: __init__.py  db.py  ext.py  extraction.py  package.py  pkg.py
be/app/db/: __init__.py  base.py
be/app/exceptions/: __init__.py
be/app/lib/: db.py  extraction.py  package.py  pkg.py
be/app/log/: __init__.py
be/app/models/: __init__.py  base.py  ext.py  extraction.py  package.py
be/app/settings/: __init__.py  api.py  app.py  db.py  http_client.py  log.py  openapi.py  redis.py  server.py  worker.py
be/app/util/: __init__.py
be/app/utils/: __init__.py  db.py
be/tests/: base.py  conftest.py  utils.py
be/tests/data/: __init__.py
be/tests/lib/: test_extraction.py  test_package.py
be/tests/routes/: test_packages.py  test_route_packages.py
fe/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
fe/src/routes/: Header.svelte  styles.css
