[tool.pdm]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
    "tox>=4.5.1",
]
dev = [
    "tox-pdm>=0.6.1",
    "flake8>=6.0.0",
]
[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ceyhun Kerti", email = "ceyhun.kerti@gmail.com"},
]
dependencies = [
    "click>=8.1.3",
    "redis>=4.5.4",
    "types-redis>=4.5.4.1",
    "asyncpg>=0.27.0",
    "types-pytz>=2023.3.0.0",
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "pydantic[dotenv]>=1.10.7",
    "SQLAlchemy>=2.0.12",
    "better-exceptions>=0.3.3",
    "idna==2.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.scripts]
app = "app.cli:app"
