[tool.pdm]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
    "tox>=4.5.1",
    "psycopg2-binary>=2.9.6",
    "Faker>=18.9.0",
    "pytest-sugar>=0.9.7",
]
dev = [
    "tox-pdm>=0.6.1",
    "flake8>=6.0.0",
    "pylint-flask-sqlalchemy>=0.2.0",
    "pylint-flask>=0.6",
]
[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ceyhun Kerti", email = "ceyhun.kerti@gmail.com"},
]
dependencies = [
    "click>=8.1.3",
    "redis>=4.5.4",
    "types-redis>=4.5.4.1",
    "types-pytz>=2023.3.0.0",
    "uvicorn>=0.22.0",
    "pydantic[dotenv]>=1.10.7",
    "SQLAlchemy>=2.0.12",
    "better-exceptions>=0.3.3",
    "idna==2.8",
    "colorama>=0.4.6",
    "Flask>=2.3.2",
    "jsonschema==4.18.0a7",
    "flasgger>=0.9.5",
    "Flask-Pydantic>=0.11.0",
    "Flask-SQLAlchemy>=3.0.3",
    "ptpython>=3.0.23",
    "sqlalchemy-stubs>=0.4",
    "pydash>=7.0.3",
    "rich>=13.3.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.scripts]
app = "app.cli:manager"
